# dev_sandbox

./: commands.md  main.py  patterns.py  prompts.md  pyproject.toml  snippets.py  system_design.md  test_snippets.py
project_rm/: HOSTING.md  PROJECT_COMMANDS.md  PROJECT_TREE.md  file_organization_1.py  file_organizer_1.py  notes.md  snippets.py  test.py
project_rm/adbot_9/: README.md  ai_adapter.py  api.py  application.py  database_adapter.py  demand_adapter.py  export_adapter.py  hosting_adapter.py  interface_adapter.py  models.py  runtime_adapter.py  user_auth_adapter.py  validation.py
project_rm/autoclear_2/: README.md  application.py  autoclear.py  controller.py  lifecycle_models.py  platform_adapter.py  process_adapter.py  runtime_adapter.py  runtime_support.py  service_adapter.py  systemd_adapter.py  task_scheduler_adapter.py  test.py  validation.py
project_rm/lead_finder_7/: README.md  ai_adapter.py  api.py  application.py  database_adapter.py  hosting_adapter.py  interface_adapter.py  models.py  runtime_adapter.py  runtime_support.py  source_adapter.py  validation.py
project_rm/media_automation_6/: README.md  ai_adapter.py  api.py  application.py  database_adapter.py  hosting_adapter.py  interface_adapter.py  models.py  runtime_adapter.py  runtime_support.py  scheduler_adapter.py  social_adapter.py  user_auth_adapter.py  validation.py
project_rm/organizer_1/: README.md  application.py  backup_service.py  file_utils.py  models.py  organize_service.py  organizer.py  runtime_adapter.py  runtime_support.py  validation.py
project_rm/partner_match_8/: README.md  ai_adapter.py  api.py  application.py  database_adapter.py  google_auth_adapter.py  hosting_adapter.py  interface_adapter.py  location_adapter.py  models.py  runtime_adapter.py  security_adapter.py  validation.py
project_rm/scheduler_3/: README.md  application.py  database_adapter.py  hosting_adapter.py  (+11 more)
(+17 files in other folders)
