[project]
name = "dev-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "psutil>=7.2.2",
    "pytest>=9.0.2",
    "pytimeparse>=1.1.8",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
]

[tool.uv.workspace]
members = [
    "auto_clear",
]
